# projeto_pdf_new

./: .gitignore  .mcp.json  CLAUDE.md  PROMPT_IMPLEMENTACAO.md  README.md  prd_completo.md  pyproject.toml
.claude/: settings.json
printguard/: CMakeLists.txt  Dockerfile  execution_report.md  sonar-project.properties  sonar_audit_report.md
printguard/.skills/: historia-01-schema-presets.md  historia-02-profiles.md  historia-03-catalogo-presets.md  historia-04-arquitetura-plugins.md  historia-05-regras-novas-core.md  historia-06-regras-complementares.md  historia-07-fix-rgb-cmyk-lcms2.md  historia-08-fixes-intent-tac-preto.md  historia-09-fixes-limpeza.md  historia-10-fix-planner-preset.md  historia-11-pipeline-completo.md  historia-12-testes-e2e.md  printguard-architecture-guard.md  printguard-fix-safety-engineer.md  printguard-pdf-loader-specialist.md  printguard-postfix-validator.md  printguard-postgres-queue-ops.md  printguard-preview-performance.md  printguard-production-hardening.md  printguard-report-builder.md  printguard-rule-author.md  printguard-sprint-executor.md  printguard-storage-artifacts.md  printguard-test-fixtures.md
printguard/.skills/tech/: cmake-build-system.md  cpp20-engineering.md  docker-compose-runtime.md  lcms2-color-management.md  linux-systemd-ops.md  mupdf-rendering.md  nlohmann-json-contracts.md  postgres-queue-patterns.md  postgresql-backend.md  qpdf-pdf-structure.md  spdlog-structured-logging.md  testing-catch2-gtest.md
printguard/apps/api/: CMakeLists.txt  main.cpp
printguard/apps/cli/: CMakeLists.txt  main.cpp
printguard/apps/inspect/: CMakeLists.txt  main.cpp
printguard/apps/worker/: CMakeLists.txt  main.cpp
printguard/build_codex/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
printguard/build_codex/Testing/Temporary/: CTestCostData.txt
printguard/build_codex/apps/api/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/apps/cli/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/apps/inspect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/apps/worker/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/analysis/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/domain/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/fix/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/orchestration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/pdf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/persistence/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/render/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/report/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/src/storage/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_codex/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_sonar/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  coverage.xml
printguard/build_sonar/apps/api/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_sonar/apps/cli/: CTestTestfile.cmake  Makefile  cmake_install.cmake
printguard/build_sonar/tests/: CTestTestfile.cmake  Makefile
printguard/config/profiles/: banner_and_signage.json  books_and_documents.json  digital_print_safe.json  digital_print_standard.json  printing_standard.json
printguard/db/migrations/: 001_initial_schema.sql  002_add_presets_to_jobs.sql  002_validation_results.sql
printguard/docs/audit/: sprint_04_audit_findings.md
printguard/scripts/: run_sonar.sh  setup.sh
printguard/sprints/: SPRINT.txt  sprint_01_fundacao_e_baseline.md  sprint_02_banco_storage_jobs.md  sprint_03_dominio_presets_profiles.md  sprint_04_loader_pdf_e_modelo_canonico.md  sprint_05_worker_fila_orquestracao.md  sprint_06_engine_analise_mvp.md  sprint_07_planner_e_fix_engine_mvp.md  sprint_08_revalidacao_preview_relatorios.md  sprint_09_hardening_testes_go_live.md
printguard/sprints/SPRINSTS_REFATORACAO/: historia_01_schema_presets.md  historia_02_profiles.md  historia_03_catalogo_presets.md  historia_04_arquitetura_plugins.md  historia_05_regras_novas_core.md  historia_06_regras_complementares.md  historia_07_fix_rgb_cmyk_lcms2.md  historia_08_fixes_intent_tac_preto.md  historia_09_fixes_limpeza.md  historia_10_fix_planner_preset.md  historia_11_pipeline_completo.md  historia_12_testes_e2e.md
printguard/src/analysis/: CMakeLists.txt  rule_engine.cpp
printguard/src/common/: CMakeLists.txt  crypto.cpp
printguard/src/domain/: CMakeLists.txt  config_loader.cpp  finding.cpp  state_machine.cpp
printguard/src/fix/: CMakeLists.txt  color_transform_lcms.cpp  color_transform_lcms.hpp  fix_engine.cpp  pdf_color_utils.cpp  pdf_color_utils.hpp
printguard/src/orchestration/: CMakeLists.txt  local_batch_processor.cpp  orchestrator.cpp
printguard/src/pdf/: CMakeLists.txt  pdf_loader.cpp
printguard/src/persistence/: CMakeLists.txt  database.cpp  job_repository.cpp
printguard/src/render/: CMakeLists.txt  preview_renderer.cpp
printguard/src/report/: CMakeLists.txt  report_builder.cpp
printguard/src/storage/: CMakeLists.txt  local_storage.cpp
printguard/tests/: CMakeLists.txt
printguard/tests/unit/: domain_test.cpp  historia_05_rules_test.cpp  historia_06_rules_test.cpp  historia_07_fix_rgb_cmyk_lcms2_test.cpp  historia_08_fixes_intent_tac_preto_test.cpp  historia_09_fixes_limpeza_test.cpp  historia_10_fix_planner_preset_test.cpp  historia_11_pipeline_completo_test.cpp  pdf_test.cpp  preset_schema_test.cpp  smoke_test.cpp
printguard/tools/: analyzer_report.txt  full_audit_report.txt  sonar_token.json
(+382 files in other folders)
